--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p id="font1">Feedback board</p>
                 </div>
                 <div class="dome1">
-                    <p class="me"><span class="ba"> <i class="fas fa-webcam"></i>1</span> <span class="bb">6 suggestion
+                    <p class="me"><span class="ba"></span> <span class="bb">6 suggestion
                         </span><span class="bc">sort by:</span>
                         most update <button class="bd">+Add Feedback</button></p>
                 </div>
